[package]
name = "monero-lws"
version = "0.1.0"
authors = ["Monero Rust Contributors", "Sebastian Kung <seb.kung@gmail.com>"]
edition = "2018"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["monero", "asynchronous", "net"]
license = "MIT"
documentation = "https://docs.rs/monero-lws"
homepage = "https://github.com/monero-rs/monero-lws"
repository = "https://github.com/monero-rs/monero-lws"
description = "RPC client for Monero light wallet server"
rust-version = "1.56.1"

[dependencies]
anyhow = "1"
fixed-hash = "0.7"
hex = "0.4"
http = "0.2"
jsonrpc-core = "18"
monero = { version = "0.17", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
# Async
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
monero-rpc = "0.3"
